<?xml version="1.0" encoding="utf-8"?>
<navigation
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	app:startDestination="@id/strategiesFragment">

	<fragment
		android:id="@+id/strategiesFragment"
		android:name="com.marconius.ohcraps.ui.StrategiesFragment"
		android:label="@string/app_name">

		<action
			android:id="@+id/action_strategiesFragment_to_strategyDetailFragment"
			app:destination="@id/strategyDetailFragment" />
	</fragment>

	<fragment
		android:id="@+id/rulesFragment"
		android:name="com.marconius.ohcraps.ui.RulesFragment"
		android:label="@string/title_rules" />

	<fragment
		android:id="@+id/createStrategyFragment"
		android:name="com.marconius.ohcraps.ui.CreateStrategyFragment"
		android:label="@string/title_create_strategy" />

	<fragment
		android:id="@+id/aboutFragment"
		android:name="com.marconius.ohcraps.ui.AboutFragment"
		android:label="@string/title_about" />

	<fragment
		android:id="@+id/strategyDetailFragment"
		android:name="com.marconius.ohcraps.ui.StrategyDetailFragment"
		android:label="@string/app_name">

		<argument
			android:name="strategyAssetFileName"
			app:argType="string" />

		<argument
			android:name="strategyId"
			app:argType="string" />
	</fragment>

</navigation>
