<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.fragment.app.FragmentContainerView
		android:id="@+id/navHostFragment"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:name="androidx.navigation.fragment.NavHostFragment"
		app:defaultNavHost="true"
		app:navGraph="@navigation/nav_graph"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/bottomNav"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<LinearLayout
		android:id="@+id/bottomNav"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@drawable/bg_bottom_nav_rail"
		android:paddingStart="@dimen/bottomNavRailPadding"
		android:paddingTop="@dimen/bottomNavRailPadding"
		android:paddingEnd="@dimen/bottomNavRailPadding"
		android:paddingBottom="@dimen/bottomNavRailPadding"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/navStrategiesButton"
			style="@style/Widget.OhCraps.BottomRailButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/tab_strategies" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/navRulesButton"
			style="@style/Widget.OhCraps.BottomRailButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/tab_rules" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/navCreateStrategyButton"
			style="@style/Widget.OhCraps.BottomRailButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/tab_create_strategy" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/navAboutButton"
			style="@style/Widget.OhCraps.BottomRailButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/tab_about" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
